--- a/habit-tracker-frontend/src/app/app.component.html
+++ b/habit-tracker-frontend/src/app/app.component.html
@@ -1,3 +1,40 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu [type]="'push'" contentId="main-content">
+    <ion-menu-toggle autoHide="false">
+      <ion-header class="ion-padding">
+        <ion-toolbar>
+          <ion-icon slot="start" name="arrow-back-outline" size="small"></ion-icon>
+          <ion-title>Habit Tracker</ion-title>
+        </ion-toolbar>
+      </ion-header>
+    </ion-menu-toggle>  
+    <ion-content class="ion-padding">
+      <ion-list>
+        <ion-menu-toggle autoHide="false">
+          <ion-item [routerLink]="['lists-home']">
+            <ion-icon slot="start" name="list-outline"></ion-icon>
+            <ion-label>
+              Task Lists
+            </ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['settings']">
+            <ion-icon slot="start" name="options-outline"></ion-icon>
+            <ion-label>
+              Settings
+            </ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <div class="ion-page" id="main-content">
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    </ion-toolbar>
+    <ion-content class="ion-padding">
+      <ion-router-outlet></ion-router-outlet>
+    </ion-content>
+  </div>
 </ion-app>
