--- a/habit-tracker-frontend/src/app/lists-home/lists-home.page.html
+++ b/habit-tracker-frontend/src/app/lists-home/lists-home.page.html
@@ -1,13 +1,3 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>lists-home</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">lists-home</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<ion-toolbar>
+  <ion-title size="large" class="ion-text-center">Task Lists</ion-title>
+</ion-toolbar>
