--- a/habit-tracker-frontend/src/app/app.component.html
+++ b/habit-tracker-frontend/src/app/app.component.html
@@ -1,24 +1,48 @@
 <ion-app>
-  <ion-menu [type]="'push'" contentId="main-content">
+  <ion-menu [type]="'reveal'" contentId="main-content">
     <ion-menu-toggle autoHide="false">
       <ion-header class="ion-padding">
         <ion-toolbar>
           <ion-icon slot="start" name="arrow-back-outline" size="small"></ion-icon>
-          <ion-title>Habit Tracker</ion-title>
+          <ion-title class="ion-text-center">Menu</ion-title>
         </ion-toolbar>
       </ion-header>
     </ion-menu-toggle>  
     <ion-content class="ion-padding">
       <ion-list>
         <ion-menu-toggle autoHide="false">
+          <ion-item [routerLink]="['daily-task-list']">
+            <ion-icon slot="start" name="checkbox-outline"></ion-icon>
+            <ion-label>
+              Daily Task List
+            </ion-label>
+          </ion-item>
           <ion-item [routerLink]="['lists-home']">
             <ion-icon slot="start" name="list-outline"></ion-icon>
             <ion-label>
-              Task Lists
+              Lists
+            </ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['habits']">
+            <ion-icon slot="start" name="layers-outline"></ion-icon>
+            <ion-label>
+              Habits & Stacks
+            </ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['habit-statistics']">
+            <ion-icon slot="start" name="analytics-outline"></ion-icon>
+            <ion-label>
+              Habit Stats
+            </ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['user-profile']">
+            <ion-icon slot="start" name="person-circle-outline"></ion-icon>
+            <ion-label>
+              Profile
             </ion-label>
           </ion-item>
           <ion-item [routerLink]="['settings']">
-            <ion-icon slot="start" name="options-outline"></ion-icon>
+            <ion-icon slot="start" name="settings-outline"></ion-icon>
             <ion-label>
               Settings
             </ion-label>
@@ -28,11 +52,6 @@
     </ion-content>
   </ion-menu>
   <div class="ion-page" id="main-content">
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-    </ion-toolbar>
     <ion-content class="ion-padding">
       <ion-router-outlet></ion-router-outlet>
     </ion-content>
