--- a/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.html
@@ -1,3 +1,12 @@
-<p>
-  daily-task-list works!
-</p>
+<ion-card>
+  <ion-card-header>
+    <ion-card-title class="ion-text-center">
+      {{ currentDate | date:'mediumDate' }}
+    </ion-card-title>
+  </ion-card-header>
+  <ion-card-content>
+    <ion-item *ngFor="let task of taskList.tasks; index as i">
+      <ion-checkbox justify="start" labelPlacement="end" [checked]="task.completed">{{ task.name }}</ion-checkbox>
+    </ion-item>
+  </ion-card-content>
+</ion-card>
