--- a/habit-tracker-frontend/src/app/pages/daily-task-list/daily-task-list.page.html
+++ b/habit-tracker-frontend/src/app/pages/daily-task-list/daily-task-list.page.html
@@ -7,5 +7,15 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <app-daily-task-list [taskList]="dailyTaskList"></app-daily-task-list>
+  <app-daily-task-list [taskList]="dailyTaskList" (taskClicked)="onTaskClickedEvent($event)"></app-daily-task-list>
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-button>
+      <ion-icon name="add-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+      <ion-fab-button>
+        <ion-icon name="checkbox-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
 </ion-content>
