--- a/habit-tracker-frontend/src/app/pages/daily-task-list/daily-task-list.page.html
+++ b/habit-tracker-frontend/src/app/pages/daily-task-list/daily-task-list.page.html
@@ -13,7 +13,7 @@
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button>
+      <ion-fab-button (click)="onNewTaskClicked()">
         <ion-icon name="checkbox-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
