--- a/habit-tracker-frontend/src/global.scss
+++ b/habit-tracker-frontend/src/global.scss
@@ -24,3 +24,24 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+
+// .daily-task-list-fab-div {
+//     display: flex;
+//     flex-direction: row;
+//     overflow: visible;
+//     position: relative;
+
+//     ion-label {
+//         position: absolute;
+//         top: 13px;
+//         right: 60px;
+//         white-space: nowrap;
+
+//         color: black;
+//         line-height: 24px;
+//         padding: 4px 8px;
+//         border-radius: 4px;
+//     }
+//     contain: layout;
+// }
