--- a/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.html
@@ -5,8 +5,8 @@
     </ion-card-title>
   </ion-card-header>
   <ion-card-content>
-    <ion-item *ngFor="let task of taskList.tasks; index as i">
-      <ion-checkbox justify="start" labelPlacement="end" [checked]="task.completed" (ionChange)="onTaskClicked(task)">{{ task.name }}</ion-checkbox>
+    <ion-item *ngFor="let item of taskList.listItems; index as i">
+      <ion-checkbox justify="start" labelPlacement="end" [checked]="item.completed" (ionChange)="onTaskClicked(item)">{{ item.name }}</ion-checkbox>
     </ion-item>
   </ion-card-content>
 </ion-card>
