--- a/habit-tracker-frontend/src/app/components/inset-list/inset-list.component.html
+++ b/habit-tracker-frontend/src/app/components/inset-list/inset-list.component.html
@@ -1,5 +1,5 @@
 <ion-list [inset]="true">
-  <ion-item *ngFor="let item of listItems; index as i">
-    <ion-checkbox justify="start" labelPlacement="end" [checked]="item.completed" (ionChange)="onTaskClicked(item)">{{ item.name }}</ion-checkbox>
+  <ion-item *ngFor="let item of taskList.listItems; index as i">
+    <ion-checkbox justify="start" labelPlacement="end" [checked]="item.completed" (ionChange)="listItemClickedEvent(item)">{{ item.name }}</ion-checkbox>
   </ion-item>
 </ion-list>
