--- a/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.html
@@ -7,9 +7,8 @@
   <ion-card-content>
     <ion-list>
       <ng-container *ngFor="let item of taskList.listItems">
-          <app-list-item *ngIf="item instanceOf Task" [listItem]="item"></app-list-item>
-          <app-inset-list *ngIf="item instanceOf TaskList"></app-inset-list>
+        <app-list-item [listItem]="item" (listItemClicked)="onListItemClickedEvent(item)"></app-list-item>
       </ng-container>
-  </ion-list>
+    </ion-list>
   </ion-card-content>
 </ion-card>
