--- a/habit-tracker-frontend/src/app/components/list-item/list-item.component.html
+++ b/habit-tracker-frontend/src/app/components/list-item/list-item.component.html
@@ -1,3 +1,8 @@
-<ion-item *ngIf="listItem instanceOf Task">
-    <ion-checkbox justify="start" labelPlacement="end" [checked]="listItem.completed" (ionChange)="onListItemClickedEvent(listItem)">{{ listItem.name }}</ion-checkbox>
-</ion-item>
+<ng-container *ngIf="isList(listItem)">
+    <app-inset-list [taskList]="listItem" (listItemClicked)="onListItemClickedEvent(listItem)"></app-inset-list>
+</ng-container>
+<ng-container *ngIf="!isList(listItem)">
+    <ion-item>
+        <ion-checkbox justify="start" labelPlacement="end" [checked]="listItem.completed" (ionChange)="onListItemClickedEvent(listItem)">{{ listItem.name }}</ion-checkbox>
+    </ion-item>
+</ng-container>
