--- a/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.html
@@ -6,8 +6,8 @@
   </ion-card-header>
   <ion-card-content>
     <ion-list>
-      <ng-container *ngFor="let item of taskList.listItems">
-        <app-list-item [listItem]="item" (listItemClicked)="onListItemClickedEvent(item)"></app-list-item>
+      <ng-container *ngFor="let item of (taskList$ | async)!.listItems">
+        <app-list-item [listItem]="item"></app-list-item>
       </ng-container>
     </ion-list>
   </ion-card-content>
