--- a/habit-tracker-frontend/src/app/pages/daily-task-list/daily-task-list.page.html
+++ b/habit-tracker-frontend/src/app/pages/daily-task-list/daily-task-list.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <app-daily-task-list [taskList]="dailyTaskList" (listItemClicked)="onListItemClickedEvent($event)"></app-daily-task-list>
+  <app-daily-task-list [taskList$]="dailyTaskListStateFacade.dailyTaskList$"></app-daily-task-list>
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
     <ion-fab-button>
       <ion-icon name="add-outline"></ion-icon>
