--- a/habit-tracker-frontend/src/app/components/inset-list/inset-list.component.html
+++ b/habit-tracker-frontend/src/app/components/inset-list/inset-list.component.html
@@ -1,9 +1,9 @@
-<ion-item (click)="onListClicked(isListClosed)">
+<ion-item (click)="onListClicked(taskList.isCollapsed)">
   <ion-checkbox class="list-disabled-checkbox" justify="start" labelPlacement="end" [checked]="taskList.completedTaskCount === taskList.totalTaskCount">{{ taskList.name }}</ion-checkbox>
-  <ion-icon name="chevron-down-outline" slot="end" *ngIf="isListClosed"></ion-icon>
-  <ion-icon name="chevron-up-outline" slot="end" *ngIf="!isListClosed"></ion-icon>
+  <ion-icon name="chevron-down-outline" slot="end" *ngIf="taskList.isCollapsed"></ion-icon>
+  <ion-icon name="chevron-up-outline" slot="end" *ngIf="!taskList.isCollapsed"></ion-icon>
 </ion-item> 
-<ion-list *ngIf="!isListClosed">
+<ion-list *ngIf="!taskList.isCollapsed">
   <ion-item *ngFor="let item of taskList.listItems; index as i" class="inset-list-item">
     <ion-checkbox justify="start" labelPlacement="end" [checked]="item.completed" (ionChange)="listItemClickedEvent(item)">{{ item.name }}</ion-checkbox>
   </ion-item>
