--- a/habit-tracker-frontend/src/app/components/list-item/list-item.component.html
+++ b/habit-tracker-frontend/src/app/components/list-item/list-item.component.html
@@ -1,8 +1,9 @@
 <ng-container *ngIf="isList(listItem)">
-    <app-inset-list [taskList]="listItem" (listItemClicked)="onListItemClickedEvent(listItem)"></app-inset-list>
+    <app-inset-list [taskList]="listItem" [isEditMode]="isEditMode" (listItemClicked)="onListItemClickedEvent(listItem)" (listItemReordered)="onListItemReorderedEvent($event)"></app-inset-list>
 </ng-container>
 <ng-container *ngIf="!isList(listItem)">
     <ion-item>
+        <ion-reorder *ngIf="isEditMode" slot="start"></ion-reorder>
         <ion-checkbox justify="start" labelPlacement="end" [checked]="listItem.completed" (ionChange)="onListItemClickedEvent(listItem)">{{ listItem.name }}</ion-checkbox>
     </ion-item>
 </ng-container>
