--- a/habit-tracker-frontend/src/app/components/inset-list/inset-list.component.html
+++ b/habit-tracker-frontend/src/app/components/inset-list/inset-list.component.html
@@ -1,10 +1,14 @@
 <ion-item (click)="onListClicked(taskList.isCollapsed)">
+  <ion-reorder *ngIf="isEditMode" slot="start"></ion-reorder>
   <ion-checkbox class="list-disabled-checkbox" justify="start" labelPlacement="end" [checked]="taskList.completedTaskCount === taskList.totalTaskCount">{{ taskList.name }}</ion-checkbox>
   <ion-icon name="chevron-down-outline" slot="end" *ngIf="taskList.isCollapsed"></ion-icon>
   <ion-icon name="chevron-up-outline" slot="end" *ngIf="!taskList.isCollapsed"></ion-icon>
 </ion-item> 
 <ion-list *ngIf="!taskList.isCollapsed">
-  <ion-item *ngFor="let item of taskList.listItems; index as i" class="inset-list-item">
-    <ion-checkbox justify="start" labelPlacement="end" [checked]="item.completed" (ionChange)="listItemClickedEvent(item)">{{ item.name }}</ion-checkbox>
-  </ion-item>
+  <ion-reorder-group [disabled]="false" (ionItemReorder)="handleListItemReorder($any($event))">
+    <ion-item *ngFor="let item of taskList.listItems; index as i" class="inset-list-item">
+      <ion-reorder *ngIf="isEditMode" slot="start"></ion-reorder>
+      <ion-checkbox justify="start" labelPlacement="end" [checked]="item.completed" (ionChange)="listItemClickedEvent(item)">{{ item.name }}</ion-checkbox>
+    </ion-item>
+  </ion-reorder-group>
 </ion-list> 
