Added list reorder - ALMOST WORKING

--- a/habit-tracker-frontend/src/app/app.component.html
+++ b/habit-tracker-frontend/src/app/app.component.html
@@ -3,8 +3,8 @@
     <ion-menu-toggle autoHide="false">
       <ion-header class="ion-padding">
         <ion-toolbar>
-          <ion-icon slot="start" name="arrow-back-outline" size="small"></ion-icon>
-          <ion-title class="ion-text-center">Menu</ion-title>
+          <ion-icon class="ion-padding" slot="start" name="arrow-back-outline" size="small"></ion-icon>
+          <ion-title class="ion-text-center" slot="start">Menu</ion-title>
         </ion-toolbar>
       </ion-header>
     </ion-menu-toggle>  
