--- a/habit-tracker-frontend/src/global.scss
+++ b/habit-tracker-frontend/src/global.scss
@@ -26,22 +26,56 @@
 @import "@ionic/angular/css/flex-utils.css";
 
 
-// .daily-task-list-fab-div {
-//     display: flex;
-//     flex-direction: row;
-//     overflow: visible;
-//     position: relative;
+.list-box {
+    padding: 20px 10px;
+    border-bottom: solid 1px #ccc;
+    color: rgba(0, 0, 0, 0.87);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    font-size: 16px;
+}
 
-//     ion-label {
-//         position: absolute;
-//         top: 13px;
-//         right: 60px;
-//         white-space: nowrap;
+.drag-handle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    cursor: move;
+}
 
-//         color: black;
-//         line-height: 24px;
-//         padding: 4px 8px;
-//         border-radius: 4px;
-//     }
-//     contain: layout;
-// }
+.list-checkbox {
+    padding-left: 10px;
+}
+
+.inset-list-box {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cdk-drag-preview {
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+                0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+    opacity: 0;
+}
+
+.cdk-drag-animating {
+    transition: transform 250ms cubic bezier(0, 0, 0.2, 1);
+}
+
+.list-div.cdk-drop-list-dragging .list-box:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
