Made styling changes to daily task list and updated some drag and drop behaviors

--- a/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.html
@@ -8,7 +8,7 @@
     <div 
       cdkDropList 
       id="mainList"
-      class="list-div" 
+      class="list-div main-list-div" 
       (cdkDropListDropped)="onListItemReorderedEvent($event)"
       #mainList="cdkDropList"
       [cdkDropListData]="(taskList$ | async)!.listItems"
