--- a/habit-tracker-frontend/src/app/components/inset-list/inset-list.component.scss
+++ b/habit-tracker-frontend/src/app/components/inset-list/inset-list.component.scss
@@ -1,7 +1,8 @@
-.list-disabled-checkbox {
-    pointer-events: none;
+.inset-list-div {
+    box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .inset-list-item {
-    padding-left: 20px;
+    padding-left: 25px;
+    background: var(--ion-color-step-100);
 }
