--- a/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.scss
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.scss
@@ -1,10 +1,5 @@
-.list-div {
-  width: 500px;
-  max-width: 100%;
-  border: solid 1px #ccc;
-  min-height: 60px;
-  display: block;
-  background: white;
+.main-list-div {
+  border: solid 1px var(--ion-color-step-300);
   border-radius: 4px;
-  overflow: hidden;
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
