--- a/habit-tracker-frontend/src/app/components/list-item/list-item.component.html
+++ b/habit-tracker-frontend/src/app/components/list-item/list-item.component.html
@@ -2,7 +2,11 @@
     <app-inset-list [taskList]="listItem" [isEditMode]="isEditMode" (listItemClicked)="onListItemClickedEvent(listItem)"></app-inset-list>
 </ng-container>
 <ng-container *ngIf="!isList(listItem)">
-    <div cdkDrag class="list-box" [cdkDragDisabled]="!isEditMode">
+    <div 
+    cdkDrag
+    [cdkDragData]="listItem"
+    class="list-box"
+    [cdkDragDisabled]="!isEditMode">
         <div cdkDragHandle *ngIf="isEditMode" class="drag-handle">
             <ion-icon class="list-icons" name="reorder-two-outline"></ion-icon>
         </div>
