--- a/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.scss
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list.component.scss
@@ -3,3 +3,8 @@
   border-radius: 4px;
   box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
+
+.daily-task-list-card {
+  display: flex;
+  justify-content: center;
+}
