Added button to make item a list. Working on making a list back into an item

--- a/habit-tracker-frontend/src/app/components/inset-list/inset-list.component.scss
+++ b/habit-tracker-frontend/src/app/components/inset-list/inset-list.component.scss
@@ -6,3 +6,11 @@
     padding-left: 25px;
     background: var(--ion-color-step-100);
 }
+
+.inset-list-box {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
