Added new task functionality and add + remove to state store

--- a/habit-tracker-frontend/src/app/components/daily-task-list/inset-list/inset-list.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/inset-list/inset-list.component.html
@@ -32,7 +32,7 @@
     (cdkDragMoved)="dragMoved($event)"
     (cdkDragReleased)="dragReleased($event)"
   >
-    <div *ngIf="isNewTask(item)" class="new-task-input-box">
+    <div *ngIf="isNewTask(item)" class="new-task-input-box-inset">
       <daily-task-list-new-task
         (itemNameInputText)="onNewTaskNameEnterEvent($event)"
         (lostFocusEvent)="onNewTaskFocusOutEvent()"
