--- a/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.html
@@ -10,14 +10,24 @@
         (cdkDragMoved)="dragMoved($event)"
         (cdkDragReleased)="dragReleased($event)"
     >
-        <div cdkDragHandle *ngIf="isEditMode" class="drag-handle">
-            <ion-icon class="list-icons" name="reorder-two-outline"></ion-icon>
-        </div>
-        <div class="tasklist-item-box">       
-            <ion-checkbox class="list-checkbox" justify="start" labelPlacement="end" [checked]="listItem.completed" (ionChange)="onListItemClickedEvent(listItem)">{{ listItem.name }}</ion-checkbox>
-            <div *ngIf="isEditMode" class="item-add-icon-box" slot="end" (click)="makeItemListClicked()">
-                <ion-icon class="list-icons" name="add-outline"></ion-icon>
+        <ng-container *ngIf="isNewTask(listItem)">
+            <div class="new-task-input-box">
+                <daily-task-list-new-task
+                    (itemNameInputText)="onNewTaskNameEnterEvent($event)"
+                    (lostFocusEvent)="onNewTaskFocusOutEvent()"
+                ></daily-task-list-new-task>
             </div>
-        </div>
+        </ng-container>
+        <ng-container *ngIf="!isNewTask(listItem)">
+            <div cdkDragHandle *ngIf="isEditMode" class="drag-handle">
+                <ion-icon class="list-icons" name="reorder-two-outline"></ion-icon>
+            </div>
+            <div class="tasklist-item-box">       
+                <ion-checkbox class="list-checkbox" justify="start" labelPlacement="end" [checked]="listItem.completed" (ionChange)="onListItemClickedEvent(listItem)">{{ listItem.name }}</ion-checkbox>
+                <div *ngIf="isEditMode" class="item-add-icon-box" slot="end" (click)="makeItemListClicked()">
+                    <ion-icon class="list-icons" name="add-outline"></ion-icon>
+                </div>
+            </div>
+        </ng-container>
     </div>
 </ng-container>
