--- a/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.html
@@ -1,9 +1,4 @@
 <ion-card>
-  <ion-card-header>
-    <ion-card-title class="ion-text-center">
-      {{ currentDate | date:'mediumDate' }}
-    </ion-card-title>
-  </ion-card-header>
   <ion-card-content class ="daily-task-list-card">
     <div 
       cdkDropList
@@ -14,8 +9,15 @@
       [cdkDropListConnectedTo]="connectedLists"
       [cdkDropListEnterPredicate]="allowDropPredicate"
     >
-      <ng-container *ngFor="let item of taskList.listItems">
-        <app-list-item [listItem]="item" [isEditMode]="isEditMode"></app-list-item>
+      <ng-container *ngIf="taskList.listItems.length > 0">
+        <ng-container *ngFor="let item of taskList.listItems">
+          <app-list-item [listItem]="item" [isEditMode]="isEditMode"></app-list-item>
+        </ng-container>
+      </ng-container>
+      <ng-container *ngIf="taskList.listItems.length == 0">
+        <div class="ion-text-center ion-padding">
+          <ion-text>Your daily task list is empty. Create a task below to start!</ion-text>
+        </div>
       </ng-container>
     </div>
   </ion-card-content>
