--- a/habit-tracker-frontend/src/app/components/daily-task-list/inset-list/inset-list.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/inset-list/inset-list.component.html
@@ -3,12 +3,12 @@
   class="list-box" 
   (click)="onListClicked(taskList.isCollapsed)" 
   [cdkDragData]="taskList"
-  [cdkDragDisabled]="!isEditMode && !taskList.isCollapsed">
+  [cdkDragDisabled]="dragDisabled">
   <div cdkDragHandle class="drag-handle" *ngIf="isEditMode && taskList.isCollapsed">
     <ion-icon class="list-icons" name="reorder-two-outline"></ion-icon>
   </div>
   <div class="inset-list-box">
-    <ion-checkbox class="list-disabled-checkbox list-checkbox" justify="start" labelPlacement="end" [checked]="taskList.completedTaskCount === taskList.totalTaskCount">{{ taskList.name }}</ion-checkbox>
+    <ion-checkbox class="list-disabled-checkbox list-checkbox" justify="start" labelPlacement="end" [checked]="taskList.completed">{{ taskList.name }}</ion-checkbox>
     <ion-icon class="list-icons" name="chevron-down-outline" slot="end" *ngIf="taskList.isCollapsed"></ion-icon>
     <ion-icon class="list-icons" name="chevron-up-outline" slot="end" *ngIf="!taskList.isCollapsed"></ion-icon>
   </div>
