Messing with deleting tasks on DTL

--- a/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.html
@@ -2,7 +2,8 @@
     <app-inset-list [taskList]="listItem" [isEditMode]="isEditMode" (listItemClicked)="onListItemClickedEvent(listItem)"></app-inset-list>
 </ng-container>
 <ng-container *ngIf="!isList(listItem)">
-    <div 
+    <div
+        id="listItem.id"
         cdkDrag
         [cdkDragData]="listItem"
         class="list-box"
