--- a/habit-tracker-frontend/src/app/pages/lists-home/lists-home.page.html
+++ b/habit-tracker-frontend/src/app/pages/lists-home/lists-home.page.html
@@ -6,3 +6,11 @@
     <ion-title size="large">Lists</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <div class="ion-padding filter-header">
+    <ion-button color="light">
+      Filter
+      <ion-icon name="filter-outline"></ion-icon>
+    </ion-button>
+  </div>
+</ion-content>
