--- a/habit-tracker-frontend/src/app/pages/daily-task-list/daily-task-list.page.html
+++ b/habit-tracker-frontend/src/app/pages/daily-task-list/daily-task-list.page.html
@@ -16,13 +16,14 @@
     </ion-fab-list>
   </ion-fab>
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-    <ion-fab-button>
+    <ion-fab-button (click)="onNewTaskClicked()">
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
-    <ion-fab-list side="top">
-      <ion-fab-button (click)="onNewTaskClicked()">
-        <ion-icon class="fab-checkbox-icon" name="checkbox-outline"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
+  </ion-fab>
+  <ion-fab slot="fixed" vertical="bottom" horizontal="center" *ngIf="isEditMode" id="delete-can"
+    cdkDropList (cdkDropListDropped)="onItemDropped($any($event))">
+    <ion-fab-button color="danger">
+      <ion-icon name="trash-outline"></ion-icon>
+    </ion-fab-button>
   </ion-fab>
 </ion-content>
