Updated component selectors

--- a/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.html
@@ -11,7 +11,7 @@
     >
       <ng-container *ngIf="taskList.listItems.length > 0">
         <ng-container *ngFor="let item of taskList.listItems">
-          <app-list-item [listItem]="item" [isEditMode]="isEditMode"></app-list-item>
+          <daily-task-list-list-item [listItem]="item" [isEditMode]="isEditMode"></daily-task-list-list-item>
         </ng-container>
       </ng-container>
       <ng-container *ngIf="taskList.listItems.length == 0">
