--- a/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="isList(listItem)">
-    <app-inset-list [taskList]="listItem" [isEditMode]="isEditMode" (listItemClicked)="onListItemClickedEvent(listItem)"></app-inset-list>
+    <daily-task-list-inset-list [taskList]="listItem" [isEditMode]="isEditMode" (listItemClicked)="onListItemClickedEvent(listItem)"></daily-task-list-inset-list>
 </ng-container>
 <ng-container *ngIf="!isList(listItem)">
     <div
