--- a/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.html
@@ -6,29 +6,38 @@
         id="listItem.id"
         cdkDrag
         [cdkDragData]="listItem"
-        class="list-box"
         [cdkDragDisabled]="!isEditMode"
         (cdkDragMoved)="dragMoved($event)"
         (cdkDragReleased)="dragReleased($event)"
+        class="list-box list-item-container"
+        #listItemContainer
     >
-        <ng-container *ngIf="isNewTask(listItem)">
-            <div class="new-task-input-box">
-                <daily-task-list-new-task
-                    (itemNameInputText)="onNewTaskNameEnterEvent($event)"
-                    (lostFocusEvent)="onNewTaskFocusOutEvent()"
-                ></daily-task-list-new-task>
-            </div>
-        </ng-container>
-        <ng-container *ngIf="!isNewTask(listItem)">
-            <div cdkDragHandle *ngIf="isEditMode" class="drag-handle">
-                <ion-icon class="list-icons" name="reorder-two-outline"></ion-icon>
-            </div>
-            <div class="tasklist-item-box">       
-                <ion-checkbox class="list-checkbox" justify="start" labelPlacement="end" [checked]="listItem.completed" (ionChange)="onListItemClickedEvent(listItem)">{{ listItem.name }}</ion-checkbox>
-                <div *ngIf="isEditMode" class="item-add-icon-box" slot="end" (click)="makeItemListClicked()">
-                    <ion-icon class="list-icons" name="add-outline"></ion-icon>
+        <div class="list-item-row">
+            <ng-container *ngIf="isNewTask(listItem)">
+                <div class="new-task-input-box ion-padding">
+                    <daily-task-list-new-task
+                        (itemNameInputText)="onNewTaskNameEnterEvent($event)"
+                        (lostFocusEvent)="onNewTaskFocusOutEvent()"
+                    ></daily-task-list-new-task>
                 </div>
+            </ng-container>
+            <ng-container *ngIf="!isNewTask(listItem)">
+                <div cdkDragHandle *ngIf="isEditMode" class="drag-handle">
+                    <ion-icon class="list-icons" name="reorder-two-outline"></ion-icon>
+                </div>
+                <div class="tasklist-item-box list-item-row"> 
+                    <ion-checkbox class="list-checkbox" justify="start" labelPlacement="end" [checked]="listItem.completed" (ionChange)="onListItemClickedEvent(listItem)">{{ listItem.name }}</ion-checkbox>
+                    <div *ngIf="isEditMode" class="item-add-icon-box" slot="end" (click)="makeItemListClicked()">
+                        <ion-icon class="list-icons" name="add-outline"></ion-icon>
+                    </div>
+                </div>
+            </ng-container>
+        </div>
+        <div class="swipe-icon-row">
+            <div class="swipe-icon-container">
+              <ion-icon name="trash"></ion-icon>
+              <ion-icon name="information-circle-outline"></ion-icon>
             </div>
-        </ng-container>
+        </div>
     </div>
 </ng-container>
