--- a/habit-tracker-frontend/src/theme/variables.scss
+++ b/habit-tracker-frontend/src/theme/variables.scss
@@ -109,6 +109,8 @@ $app-theme: mat.define-light-theme((
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-card-background: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
