--- a/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.scss
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.scss
@@ -21,3 +21,10 @@
     justify-content: space-between;
     width: 100%;
 }
+
+.list-item-row {
+    background-color: var(--ion-card-background);
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 2;
+}
