--- a/habit-tracker-frontend/src/app/components/daily-task-list/new-task/new-task.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/new-task/new-task.component.html
@@ -4,9 +4,11 @@
   fill="outline"
   type="text"
   inputmode="text"
+  color="primary"
   (ionChange)="onTextInputEnter($any($event))"
   (ionBlur)="onFocusOut()"
   autofocus="true"
   maxlength="100"
+  class="new-task-input"
 >
 </ion-input>
