--- a/habit-tracker-frontend/src/theme/variables.scss
+++ b/habit-tracker-frontend/src/theme/variables.scss
@@ -110,7 +110,9 @@ $app-theme: mat.define-light-theme((
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
+  /** Custom Light Variables **/
   --ion-card-background: #fff;
+  --ion-color-step-100: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
